--- a/index.html
+++ b/index.html
@@ -1,28 +1,50 @@
-<center>
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>No Chance - Solana RetroDrop</title>
+    <link rel="stylesheet" href="styles.css" />
     <script src="./index.js"></script>
-
-    <title>No Chance - Solana Airdrop!</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <header>
-        <div class="logo">GRAB THE FREE AIRDROP - BEFORE RAYDIUM LISTING!!</div>
+        <div class="logo">🚀 Claim 100,000 $NOCH Airdrop Before Raydium Listing!</div>
     </header>
+
     <main>
-        <div class="content">
-            <!-- <p>100,000 $NOCH TOKENS PER WALLET ADDRESS</p> -->
-            <button class="connect-wallet">CLAIM FREE AIRDROP - 100,000 $NOCH TOKENS</button>
-        </div>
+        <section class="content">
+            <h1>Welcome to the $NOCH Retro Airdrop</h1>
+            <p>
+                We're rewarding early Solana users with <strong>100,000 $NOCH tokens</strong> 
+                as part of our launch RetroDrop.
+            </p>
+            <p>
+                $NOCH is the native utility token of the NoChance protocol, powering governance, 
+                staking, and ecosystem rewards across Solana dApps.
+            </p>
+            <button class="connect-wallet" onclick="window.location.href='check-eligibility.html'">
+                🔍 Check Eligibility
+            </button>
+        </section>
+
+        <section class="criteria">
+            <h2>Eligibility Criteria</h2>
+            <ul>
+                <li>✅ Hold at least 1 SOL in your wallet (at snapshot time)</li>
+                <li>✅ Completed at least 1 successful transaction on Solana</li>
+                <li>✅ Own a valuable or verified NFT collection on Solana</li>
+                <li>✅ Interacted with Solana DeFi (staking, swaps, lending, etc.)</li>
+                <li>✅ Participated in early NoChance community events</li>
+            </ul>
+            <p>
+                The more criteria you meet, the more tokens you'll receive. Allocation is weighted and verified automatically.
+            </p>
+        </section>
     </main>
+
     <footer>
-        <p>© 2024 No Chance!! All rights reserved.</p>
+        <p>© 2025 NoChance Protocol. All rights reserved.</p>
     </footer>
-    <!-- <script src="wallet.js"></script> -->
-
-
-</body></html>
-</center>
+</body>
+</html>
