--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
                 as part of our launch RetroDrop.
             </p>
             <p>
-                $NOCH is the native utility token of the NoChance protocol, powering governance, 
-                staking, and ecosystem rewards across Solana dApps.
+                <strong>$NOCH</strong> is the native utility token of the NoChance protocol, enabling governance,
+                ecosystem staking, and exclusive access to upcoming Solana-powered dApps.
+            </p>
+            <p>
+                If you're an active user of the Solana blockchain, you might be eligible for a major token reward.
+                Don’t miss your chance to claim your airdrop before our Raydium listing!
             </p>
             <button class="connect-wallet" onclick="window.location.href='check-eligibility.html'">
                 🔍 Check Eligibility
@@ -31,14 +35,15 @@
         <section class="criteria">
             <h2>Eligibility Criteria</h2>
             <ul>
-                <li>✅ Hold at least 1 SOL in your wallet (at snapshot time)</li>
-                <li>✅ Completed at least 1 successful transaction on Solana</li>
-                <li>✅ Own a valuable or verified NFT collection on Solana</li>
-                <li>✅ Interacted with Solana DeFi (staking, swaps, lending, etc.)</li>
-                <li>✅ Participated in early NoChance community events</li>
+                <li>✅ Hold at least 1 SOL in your wallet (at the snapshot time)</li>
+                <li>✅ Completed at least one valid transaction on the Solana network</li>
+                <li>✅ Own a valuable or verified NFT collection within the Solana ecosystem</li>
+                <li>✅ Interacted with Solana DeFi protocols (staking, swaps, lending)</li>
+                <li>✅ Participated in early NoChance events or testnet phases</li>
             </ul>
             <p>
-                The more criteria you meet, the more tokens you'll receive. Allocation is weighted and verified automatically.
+                The more criteria you meet, the larger your allocation. Our reward system uses a weighted score
+                to ensure fairness and reward true network contributors.
             </p>
         </section>
     </main>
