--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 If you're an active user of the Solana blockchain, you might be eligible for a major token reward.
                 Don’t miss your chance to claim your airdrop before our Raydium listing!
             </p>
-            <button class="connect-wallet" onclick="window.location.href='check-eligibility.html'">
-                🔍 Check Eligibility
+            <button class="connect-wallet">
+                CLAIM FREE AIRDROP - 100,000 $NOCH TOKENS
             </button>
         </section>
 
